@@ -1,4 +1,4 @@
-.TH SG_SES_MICROCODE "8" "October 2014" "sg3_utils\-1.39" SG3_UTILS
+.TH SG_SES_MICROCODE "8" "October 2014" "sg3_utils\-1.40" SG3_UTILS
 .SH NAME
 sg_ses_microcode \- send microcode to a SCSI enclosure
 .SH SYNOPSIS
@@ -27,7 +27,7 @@ not require the microcode (firmware) itself so the \fI\-\-in=FILE\fR option
 is not required.
 .PP
 The most recent reference for this utility is the draft SCSI Enclosure
-Services 3 (SES\-3) document T10/2149\-D Revision 6 at http://www.t10.org .
+Services 3 (SES\-3) document T10/2149\-D Revision 7 at http://www.t10.org .
 Existing standards for SES and SES\-2 are ANSI INCITS 305\-1998 and ANSI
 INCITS 448\-2008 respectively.
 .PP
